--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.13",
+    "graphql": "^15.5.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-navigation": "^7.12.0",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -21,7 +26,10 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
     "@types/react-native": "^0.64.0",
+    "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components-react-native": "^5.1.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
