--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.13",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "graphql": "^15.5.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-navigation": "^7.12.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.0.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
